fixes on mobile design responsivenes

--- a/src/pages/Games/Show/GamesShow.scss
+++ b/src/pages/Games/Show/GamesShow.scss
@@ -160,17 +160,6 @@
         margin: 0;
       }
 
-      .recommended {
-        margin-left: 54px;
-      }
-
-      .section-text {
-        font-size: 23px;
-        letter-spacing: 0px;
-        color: #E4E4E4;
-        opacity: 1;
-      }
-
       .about-game-info {
         max-width: 100%;
       }
@@ -182,10 +171,10 @@
       }
                 
       .section-text {
-        font-style:  Montserrat;
-        max-width: 998px; 
+        font-family:  Montserrat;
+        max-width: 100%; 
         text-align: left;
-        font: 23px;
+        font-size: 23px;
         letter-spacing: 0px;
         color: #E4E4E4;
       }
@@ -230,10 +219,6 @@
     .pricing {
 
       .payment {
-
-        .top-game-info {
-          display: none;
-        }
 
         .fiat {
           h3 {
@@ -352,17 +337,6 @@
 
         .payment {
           padding: 10px 0px;
-
-          .top-game-info {
-            display: flex;
-            font-family: Open Sans;
-            font-size: 17px;
-            margin-bottom: 10px;
-
-            .title {
-              font-size: 20px;
-            }
-          }
         }
       }
 
@@ -375,7 +349,7 @@
           display: flex;
           width: 100%;
           text-align: center;
-          font-size: 22px;
+          font-size: 20px;
           margin-bottom: 30px;
 
           .system-req-btn {
@@ -398,6 +372,9 @@
 
         .system-req-text {
           border: none;
+          div {
+            margin-bottom: 20px;
+          }
         }
 
 
@@ -487,11 +464,15 @@
       }
 
       .splide__track {
-        height: 250px !important;
+        height: 400px !important;
+      }
+
+      div[preload] {
+        height: 400px !important;
       }
       
       video {
-        height: 221px !important;
+        height: 400px !important;
       }
     }
 
